# DashDice-Progress-Sync-Mod

./: .gitignore  CMakeLists.txt  DEVELOPER_NOTES.md  README.md  about.md  mod.json
src/: main.cpp
src/bridge/: BridgeServer.cpp  BridgeServer.hpp  LocalBridge.cpp  LocalBridge.hpp
src/sync/: SyncManager.cpp  SyncManager.hpp
